# ProjectSport

./: Hayder.glade.bak  Makefile.am  README.md  configure.in  inerfaces.glade.bak  inerfaces.gladep.bak  page d'accueil.glade.bak
Projects/Hayder/: Hayder.glade  Makefile.am
Projects/Hayder/src/: interface.c  interface.h  main.c  member.h
pixmaps/: hhhhh.avif
src/: Makefile.am  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c
